# ASC-ODE-Team13

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  genindex.html  index.html  objects.inv  report.html  search.html  searchindex.js
_sources/: report.md
demos/: demo_autodiff.cpp  legendre.cpp  plot_all.py  plot_legendre.py  plotms.py  test_autodiff.cpp  test_ode.cpp
docs/: _config.yml  _toc.yml  intro.md  report.html  report.md
docs/_build/.doctrees/: environment.pickle  intro.doctree  report.doctree
docs/_build/.doctrees/_sources/: report.doctree
docs/_build/html/: .buildinfo  genindex.html  intro.html  objects.inv  report.html  search.html  searchindex.js
docs/_build/html/_sources/: report.html
mechsystem/: CMakeLists.txt  Newmark.hpp  bind_mass_spring.cpp  mass_spring.cpp  mass_spring.hpp  mass_spring.ipynb  test_mass_spring.py
mechsystem/pynb/: chain.ipynb  crane.ipynb  double_pendulum.ipynb  double_pendulum_constrained.ipynb  spinning_top.ipynb
results/: legendre_output.csv
src/: CMakeLists.txt  Newton.hpp  autodiff.hpp  explicitRK.hpp  implicitRK.hpp  legendre.hpp  nonlinfunc.hpp  timestepper.hpp
